<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/cara_mencuci_tangan_dengan_benar"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="400dp"
        android:layout_height="170dp"
        android:layout_marginTop="100sp"
        android:src="@drawable/tangan" />


    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gambar1"
        android:layout_marginTop="20dp"
        android:text="@string/_1_basahi_tangan_dengan_air_mengalir"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp"
        android:text="@string/_2_tuang_sabun_pada_tangan_secukupnya"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:text="@string/_3_gosok_punggung"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginTop="10dp"
        android:text="@string/_4_gosok_telapak"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="10dp"
        android:text="@string/_5_gosok_ibu_jari"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:layout_marginTop="10dp"
        android:text="@string/_6_gosok_jari"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_marginTop="10dp"
        android:text="@string/_7_bilas"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text7"
        android:layout_marginTop="10dp"
        android:text="@string/_8_keringkan"
        android:textSize="18sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text8"
        android:layout_marginTop="10dp"
        android:text="@string/_9_tangan"
        android:textSize="18sp"
        android:typeface="serif" />



</RelativeLayout>